added chmods to make perms happier

--- a/web/Makefile
+++ b/web/Makefile
@@ -1,4 +1,8 @@
-FILES=$(wildcard *)
+FILES=$(shell find . -type f)
+DIRS=$(shell find . -type d)
+
+DIRMODE=0755
+FILEMODE=0644
 
 all:    beta
 
@@ -6,8 +10,12 @@ all:    beta
 .PHONY: live
 
 beta: $(FILES)
+	chmod $(FILEMODE) $(FILES)
+	chmod $(DIRMODE) $(DIRS)
 	. .rsync beta
 
 live: $(FILES)
+	chmod $(FILEMODE) $(FILES)
+	chmod $(DIRMODE) $(DIRS)
 	. .rsync
     
