--- a/clientserver/.classpath
+++ b/clientserver/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" sourcepath="lib/hessian-2.1.12-src.jar" kind="lib" path="lib/hessian-2.1.12.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
